2009-12-22  Rob Mahurin  <octave@tertiarysource.net>

	* find-defun-files.sh: Use SED and EGREP as returned by configure.

2009-12-20  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_sindow::set_name): New method.
	(figure_manager::set_name, figure_manage::do_set_name): New methods.
	(fltk_backend::property_changed): Handle change of figure title string.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake
	variables of top_builddir and top_srcdir.

2009-12-18  David Grundberg  <davidg@cs.umu.se>

	* ov-usr-fcn.cc (octave_user_script::do_multi_index_op):
	Print script filename in script indexing errors.
	(octave_user_script::subsref): Ditto.

2009-12-18  John W. Eaton  <jwe@octave.org>

	* input.cc (get_debug_input): Don't attempt to get user input
	unless stdin is a tty.  Force interactive input mode when
	reading debugging input.
	(octave_gets): Bypass readline if get_input_from_eval_string is true.

	* input.cc, input.h (stdin_is_tty): New variable.
	* octave.cc (octave_main): Set it to true if stdin is not a tty.

2009-12-16  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/max.cc (do_minmax_red_op<boolNDArray>): New
	specialization.
	(do_minmax_body): Handle btyp_bool.

2009-12-16  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.cc (symbol_table::cleanup): Call clear_variables rather than
	clear_all on the top and global scopes.

2009-12-16  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (F__init_fltk__):
	Add __remove_fltk__ to the list of atexit functions.
	(F__remove_fltk__): Wait fltk_maxtime instead of 10 seconds.

2009-12-15  John W. Eaton  <jwe@octave.org>

	* toplev.cc (do_goto_frame_relative): Stop searching at top
	stack frame even though it is not a function.

2009-12-15  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Preserve original nargout. Call